# nis-mods

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  astruct.py  classoritem.py  countedtable.py  dungeoncategory.py  fusioncompat.py  mk_mods.py  mk_mods_guts.py  mypy.ini  mypy_plugin.py  pb_mods.py  pspfsarchive.py  pyproject.toml  randomevent.py  setup.cfg  skills.py  startdatarchive.py  title.py  utils.py
astruct/: README.md  __init__.py  _carrayattr.py  _cfieldattr.py  _cstrattr.py  _type_hint_utils.py  ctypes_utils.py  str_utils.py  typed_struct.py
astruct/type_hints/: __init__.py  _gen_ctypes_info.py  carray.py  cstr.py  cstr.pyi  ctypes_aliases.py  ctypes_helpers.py  extras.py  metadata.py
la_pucelle/: __init__.py  items.py  ritems.py  skills.py  startdatarchive.py  vfsarchive.py
makai_kingdom/: __init__.py  classes.py  item_categories.py  items.py  names.py  protection.py  pspfsarchive.py  skills.py  startdatarchive.py  stringtable.py  utils.py  wish.py  ykcmparchive.py
phantom_brave/: __init__.py  classoritem.py  countedtable.py  dungeoncategory.py  fusioncompat.py  pspfsarchive.py  randomevent.py  skills.py  startdatarchive.py  title.py  utils.py
platform_config/: __init__.py
utils/: __init__.py  countedtable.py  mining.py  private_mmap.py  ro_cached_property.py  wide_shift_jis.py
utils/hexdump/: __init__.py  __main__.py  byte_utils.py  decoder.py  display_utils.py  hexdump.py
zhp/: __init__.py  item_categories.py  items.py  lzsarchive.py  nispackarchive.py  skills.py  specials.py  startdatarchive.py
